Updates to Mockups and new images

--- a/Web/Pages/Mockups/All_Positions.cshtml
+++ b/Web/Pages/Mockups/All_Positions.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <a href="Compare_Position"><img src="~/img/AS.jpg" alt="Photo of engineering room" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
+                    <a href="Compare_Position"><img src="~/img/AS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
                     <figcaption class="text-center"><h6>@Localizer["AdminAS"]</h6></figcaption>
                 </figure>
             </div>
@@ -24,14 +24,14 @@
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/CS-clerical.jpg" alt="Photo of three CCG Members having a discussion" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/CR-clerical.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["ClericalCR"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of computer systems" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/CS-Systems.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["ComputerCS"]</h6></figcaption>
                 </figure>
             </div>
@@ -39,21 +39,21 @@
         <div class="row">
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/EC.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["EconomicsEC"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/ED.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["EducationED"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/EU.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["EduSupportEU"]</h6></figcaption>
                 </figure>
             </div>
@@ -81,13 +81,13 @@
             </div>
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/GS.jpg" alt="Photo of table setup with condiments" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/GS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["GServicesGS"]</h6></figcaption>
                 </figure>
             </div>
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/EG.jpg" alt="Photo of table setup with condiments" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/EG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["GTechnicalGT"]</h6></figcaption>
                 </figure>
             </div>
@@ -97,28 +97,28 @@
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/LS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["LibraryLS"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/LI.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/LI.jpg" alt="Photo of a lighthouse" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["LightkeepersLI"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/NU.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["NursingNU"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/OE.jpg" alt="Photo of Office" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["OfficeOE"]</h6></figcaption>
                 </figure>
             </div>
@@ -127,20 +127,20 @@
         <div class="row">
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/blank.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/PM.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["ProgramAdminPM"]</h6></figcaption>
                 </figure>
             </div>
 
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/PG.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/PG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["PurchasingPG"]</h6></figcaption>
                 </figure>
             </div>
             <div class="col-sm-3 mrgn-bttm-md">
                 <figure>
-                    <img src="~/img/RO-radio.jpg" alt="Photo of MCTS Officer Robert Kennedy working his standard shift at Victoria MCTS" class="img-responsive thumbnail mrgn-bttm-sm" />
+                    <img src="~/img/RO.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
                     <figcaption class="text-center"><h6>@Localizer["RadioRO"]</h6></figcaption>
                 </figure>
             </div>
