--- a/Web/Pages/Mockups/Compare_Position.cshtml
+++ b/Web/Pages/Mockups/Compare_Position.cshtml
@@ -9,7 +9,7 @@
 <section role="contentinfo">
 
     <h2>Select a level and position</h2>
-    <figure><img src="~/Theresa/img/Positions-full.jpg" alt="Photo of " class="img-responsive  mrgn-bttm-md" /></figure>
+    <figure><img src="~/img/Positions-full.jpg" alt="Photo of " class="img-responsive  mrgn-bttm-md" /></figure>
 
     <h3>Administrative Services (AS)</h3>
     <div class="row col-md-12">
@@ -60,6 +60,6 @@
         </form>
     </div>
 
-    <a class="btn btn-primary" href="/en/Mockups/Delta" role="button">Compare Positions</a>
+    <a class="btn btn-primary" href="Delta" role="button">Compare Positions</a>
 
 </section>
