--- a/Web/Pages/Mockups/External_List.cshtml
+++ b/Web/Pages/Mockups/External_List.cshtml
@@ -21,24 +21,29 @@
         </thead>
         <tbody>
             <tr>
-                <td>CS-02</td>
-                <td>Computer Systems</td>
+                <td>SO-MAO-02</td>
+                <td>3rd Officer</td>
                 <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
             <tr>
-                <td>EC-03</td>
-                <td>Economic and Policy Analyst</td>
-                <td><a asp-page="External_Details" role="button">More Details</a></td>
+                <td>SO-MAO-03</td>
+                <td>2nd Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
             <tr>
-                <td>EG 04</td>
-                <td>Aids to Navigation (AtoN) Design</td>
-                <td><a asp-page="External_Details" role="button">More Details</a></td>
+                <td>SO-MAO-03</td>
+                <td>3rd Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
             <tr>
-                <td>GL-COI-10</td>
-                <td>Assistant Facility, Manager</td>
-                <td><a asp-page="External_Details" role="button">More Details</a></td>
+                <td>SO-MAO-03</td>
+                <td>Fishing Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>SO-MAO-04</td>
+                <td>2nd Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
         </tbody>
     </table>
@@ -49,7 +54,7 @@
                 <h2 class="wb-inv">Document navigation</h2>
 
                 <ul class="pager">
-                    <li class="previous"><a href="External_Questionnaire" rel="prev">@Localizer["Previous"]</a></li>
+                    <li class="previous"><a href="Ship_Officer" rel="prev">@Localizer["Previous"]</a></li>
                 </ul>
 
             </nav>
