--- a/Web/Pages/Mockups/External_Questionnaire.cshtml
+++ b/Web/Pages/Mockups/External_Questionnaire.cshtml
@@ -11,16 +11,14 @@
         <form method="post" action="#">
             <div class="form-group">
                 <select multiple class="form-control maxwidth " id="dt_certifications" name="dt_certifications">
-                    <option value="1">Bridge Watch Certificate</option>
-                    <option value="2">CCG Medic-A Certificate</option>
-                    <option value="3">Diver Certification Board of Canada (DCBC) Restricted Surface Supplied Diver Certification</option>
-                    <option value="4">First Aid, Marine First Aid, and Advanced Marine First Aid</option>
-                    <option value="5">Marine Emergency Duties - Basic Safety</option>
-                    <option value="6">Marine Emergency Duties - Proficiency in Advanced Firefighting</option>
-                    <option value="7">Marine Emergency Duties - Survival Craft / Rescue Boats</option>
-                    <option value="8">Master 150 GT Domestic</option>
-                    <option value="9">OEM Maintenance Qualification; Technician</option>
-                    <option value="10">Restricted Operator Certificate-Maritime Commerical (ROC-MC)</option>
+                    <option value="1">Master Mariner</option>
+                    <option value="2">Master Near Coastal</option>
+                    <option value="3">Chief Mate Near Coastal</option>
+                    <option value="4">Master 3000 GT</option>
+                    <option value="5">Master 500 GT</option>
+                    <option value="6">Master 150 GT</option>
+                    <option value="7">Watchkeeping Mate Near Coastal</option>
+                    <option value="8">Fishing Master, Third Class</option>
                 </select>
             </div>
 
@@ -39,84 +37,46 @@
                 <tbody>
                     <tr>
                         <td>
-                            <a href="#1" aria-controls="centred-popup" class="wb-lbx" role="button">Organizational Knowledge</a>
+                            <a href="#1" aria-controls="centred-popup" class="wb-lbx" role="button">Deck Management Knowledge</a>
                             <section id="1" class="mfp-hide modal-dialog modal-content overlay-def">
                                 <header class="modal-header">
-                                    <h2 class="modal-title">Organizational Knowledge</h2>
+                                    <h2 class="modal-title">Deck Management Knowledge</h2>
                                 </header>
                                 <div class="modal-body ">
-                                    <p>Knowledge of the Canadian Coast Guard organization, partners, and relationships with Fisheries and Oceans Canada (DFO), and other internal and external stakeholders.</p>
+                                    <p>The management of a deck watch to ensure safe rigging, lifting, tackle, small craft, helicopter, and cargo loading operations.</p>
                                     <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
                                 </div>
                             </section>
                         </td>
-                        <td><input type="radio" name="Org" value="" /></td>
-                        <td><input type="radio" name="Org" value="" /></td>
-                        <td><input type="radio" name="Org" value="" /></td>
-                        <td><input type="radio" name="Org" value="" /></td>
-                        <td><input type="radio" name="Org" value="" /></td>
+                        <td><input type="radio" name="Deck" value="" /></td>
+                        <td><input type="radio" name="Deck" value="" /></td>
+                        <td><input type="radio" name="Deck" value="" /></td>
+                        <td><input type="radio" name="Deck" value="" /></td>
+                        <td><input type="radio" name="Deck" value="" /></td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="#2" aria-controls="centred-popup" class="wb-lbx" role="button">Search and Rescue (SAR) Knowledge</a>
+                            <a href="#2" aria-controls="centred-popup" class="wb-lbx" role="button">Navigational Equipment Standard Operating Procedures Knowledge</a>
                             <section id="2" class="mfp-hide modal-dialog modal-content overlay-def">
                                 <header class="modal-header">
-                                    <h2 class="modal-title">Search and Rescue (SAR) Knowledge</h2>
+                                    <h2 class="modal-title">Navigational Equipment Standard Operating Procedures Knowledge</h2>
                                 </header>
                                 <div class="modal-body ">
-                                    <p>Leads the maritime component of the federal SAR system in the provision of search and rescue services to Canadian mariners and to others in need of humanitarian aid, including the coordination of SAR operations on the water for the provision of aid to persons, ships, or other craft which are, or are feared to be, in distress or imminent danger</p>
+                                    <p>Knowledge of the steps and safety regulations in preparing equipment for operation, operating equipment, and monitoring.</p>
                                     <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
                                 </div>
                             </section>
                         </td>
-                        <td><input type="radio" name="SAR" value="" /></td>
-                        <td><input type="radio" name="SAR" value="" /></td>
-                        <td><input type="radio" name="SAR" value="" /></td>
-                        <td><input type="radio" name="SAR" value="" /></td>
-                        <td><input type="radio" name="SAR" value="" /></td>
+                        <td><input type="radio" name="NESOP" value="" /></td>
+                        <td><input type="radio" name="NESOP" value="" /></td>
+                        <td><input type="radio" name="NESOP" value="" /></td>
+                        <td><input type="radio" name="NESOP" value="" /></td>
+                        <td><input type="radio" name="NESOP" value="" /></td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="#3" aria-controls="centred-popup" class="wb-lbx" role="button">Marine Domain Awareness Knowledge</a>
+                            <a href="#3" aria-controls="centred-popup" class="wb-lbx" role="button">Acts and Regulations Knowledge</a>
                             <section id="3" class="mfp-hide modal-dialog modal-content overlay-def">
-                                <header class="modal-header">
-                                    <h2 class="modal-title">Marine Domain Awareness Knowledge</h2>
-                                </header>
-                                <div class="modal-body ">
-                                    <p>Having true and timely information about everything on, under, related to, adjacent to, or bordering a sea, ocean, or other navigable waterway. This includes all related activities, infrastructure, shipping, vessels, cartography, and natural phenomena. For marine security, it includes being aware of anything in the marine domain that could threaten Canada's national security.</p>
-                                    <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
-                                </div>
-                            </section>
-                        </td>
-                        <td><input type="radio" name="Marine" value="" /></td>
-                        <td><input type="radio" name="Marine" value="" /></td>
-                        <td><input type="radio" name="Marine" value="" /></td>
-                        <td><input type="radio" name="Marine" value="" /></td>
-                        <td><input type="radio" name="Marine" value="" /></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="#4" aria-controls="centred-popup" class="wb-lbx" role="button">Program Knowledge and Application</a>
-                            <section id="4" class="mfp-hide modal-dialog modal-content overlay-def">
-                                <header class="modal-header">
-                                    <h2 class="modal-title">Program Knowledge and Application</h2>
-                                </header>
-                                <div class="modal-body ">
-                                    <p>Knowledge of the programs the Canadian Coast Guard manages and supports. Understands the services and delivery of program mandates:  Search and Rescue (SAR), Icebreaking (IB), Aids to Navigation (AtoN), Environmental Response (ER), Conservation and Protection (DFO C&P), Oceanography (DFO Science) and Fisheries Research (DFO Science).</p>
-                                    <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
-                                </div>
-                            </section>
-                        </td>
-                        <td><input type="radio" name="Program" value="" /></td>
-                        <td><input type="radio" name="Program" value="" /></td>
-                        <td><input type="radio" name="Program" value="" /></td>
-                        <td><input type="radio" name="Program" value="" /></td>
-                        <td><input type="radio" name="Program" value="" /></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="#5" aria-controls="centred-popup" class="wb-lbx" role="button">Acts and Regulations Knowledge</a>
-                            <section id="5" class="mfp-hide modal-dialog modal-content overlay-def">
                                 <header class="modal-header">
                                     <h2 class="modal-title">Acts and Regulations Knowledge</h2>
                                 </header>
@@ -126,30 +86,30 @@
                                 </div>
                             </section>
                         </td>
-                        <td><input type="radio" name="Acts" value="" /></td>
-                        <td><input type="radio" name="Acts" value="" /></td>
-                        <td><input type="radio" name="Acts" value="" /></td>
-                        <td><input type="radio" name="Acts" value="" /></td>
-                        <td><input type="radio" name="Acts" value="" /></td>
+                        <td><input type="radio" name="ARK" value="" /></td>
+                        <td><input type="radio" name="ARK" value="" /></td>
+                        <td><input type="radio" name="ARK" value="" /></td>
+                        <td><input type="radio" name="ARK" value="" /></td>
+                        <td><input type="radio" name="ARK" value="" /></td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="#6" aria-controls="centred-popup" class="wb-lbx" role="button">Diving Operations Knowledge</a>
-                            <section id="6" class="mfp-hide modal-dialog modal-content overlay-def">
+                            <a href="#4" aria-controls="centred-popup" class="wb-lbx" role="button">Fishing Officer Knowledge</a>
+                            <section id="4" class="mfp-hide modal-dialog modal-content overlay-def">
                                 <header class="modal-header">
-                                    <h2 class="modal-title">Diving Operations Knowledge</h2>
+                                    <h2 class="modal-title">Fishing Officer Knowledge</h2>
                                 </header>
                                 <div class="modal-body ">
-                                    <p>Diving knowledge required to work safely in a hostile environment through proper organization and planning.</p>
+                                    <p>The body of experiential knowledge including environmental, resource-based, ecosystem, fishing practices, fishing communities and livelihoods, governance and markets, and their dynamic relationships.</p>
                                     <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
                                 </div>
                             </section>
                         </td>
-                        <td><input type="radio" name="Diving" value="1" /></td>
-                        <td><input type="radio" name="Diving" value="2" /></td>
-                        <td><input type="radio" name="Diving" value="3" /></td>
-                        <td><input type="radio" name="Diving" value="4" /></td>
-                        <td><input type="radio" name="Diving" value="5" /></td>
+                        <td><input type="radio" name="FOK" value="" /></td>
+                        <td><input type="radio" name="FOK" value="" /></td>
+                        <td><input type="radio" name="FOK" value="" /></td>
+                        <td><input type="radio" name="FOK" value="" /></td>
+                        <td><input type="radio" name="FOK" value="" /></td>
                     </tr>
                     <tr>
                         <td>Other</td>
