--- a/Web/Pages/Mockups/Index.cshtml
+++ b/Web/Pages/Mockups/Index.cshtml
@@ -21,7 +21,7 @@
             <div class="col-lg-3 col-sm-4 mrgn-bttm-md">
                 <figure>
                     <a class="nav-link" href="member_position">
-                        <img src="~/Theresa/img/CCG-employee.png" alt="Photo of a Member of the Canadian Coast Guard" class="img-responsive img-circle mrgn-bttm-sm" />
+                        <img src="~/img/CCG-employee.png" alt="Photo of a Member of the Canadian Coast Guard" class="img-responsive img-circle mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["CCGMember"]</h4></figcaption>
                 </figure>
@@ -29,15 +29,15 @@
             <div class="col-lg-3 col-sm-4 mrgn-bttm-md">
                 <figure>
                     <a href="#">
-                        <img src="~/Theresa/img/Students.png" alt="Photo of students at graduation" class="img-responsive img-circle mrgn-bttm-sm" />
+                        <img src="~/img/Students.png" alt="Photo of students at graduation" class="img-responsive img-circle mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Student"]</h4></figcaption>
                 </figure>
             </div>
             <div class="col-lg-3 col-sm-4 mrgn-bttm-md">
                 <figure>
-                    <a href="#">
-                        <img src="~/Theresa/img/external candidates.png" alt="Photo of a group of individuals" class="img-responsive img-circle mrgn-bttm-sm" />
+                    <a href="External_Candidate">
+                        <img src="~/img/external candidates.png" alt="Photo of a group of individuals" class="img-responsive img-circle mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["External Candidate"]</h4></figcaption>
                 </figure>
