--- a/Web/Pages/Mockups/Similar_Details.cshtml
+++ b/Web/Pages/Mockups/Similar_Details.cshtml
@@ -39,7 +39,7 @@
                     <a href="#2" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 2 Summary">2</abbr></a>
                     <section id="2" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">@Localizer["Current Position Level"]: 2</h2>
+                            <h2 class="modal-title">@Localizer["Position Level"]: 2</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Novice (A level of experience has been obtained; may need help when performing a task/skill)</p>
@@ -65,7 +65,7 @@
                     <a href="#4" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 2 Summary">2</abbr></a>
                     <section id="4" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">@Localizer["Current Position Level"]: 2</h2>
+                            <h2 class="modal-title">@Localizer["Position Level"]: 2</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Novice (A level of experience has been obtained; may need help when performing a task/skill)</p>
@@ -95,7 +95,7 @@
                     <a href="#6" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 2 Summary">2</abbr></a>
                     <section id="6" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">@Localizer["Current Position Level"]: 2</h2>
+                            <h2 class="modal-title">@Localizer["Position Level"]: 2</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Novice (A level of experience has been obtained; may need help when performing a task/skill)</p>
