--- a/Web/Pages/Mockups/Ship_Officer.cshtml
+++ b/Web/Pages/Mockups/Ship_Officer.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <figure>
-                    <a class="nav-link" href="Officer_Navigation">
+                    <a class="nav-link" href="Nav_Officer">
                         <img src="~/img/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">Navigation</h4></figcaption>
@@ -17,7 +17,7 @@
             </div>
             <div class="col-sm-4">
                 <figure>
-                    <a href="Officer_Engineering">
+                    <a href="Eng_Officer">
                         <img src="~/img/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">Engineering</h4></figcaption>
