--- a/Web/Pages/Mockups/Current_Position.cshtml
+++ b/Web/Pages/Mockups/Current_Position.cshtml
@@ -55,8 +55,8 @@
                 <h2 class="wb-inv">Document navigation</h2>
 
                 <ul class="pager">
-                    <li class="previous"><a href="member_position" rel="prev">@Localizer["Previous"]</a></li>
-                    <li class="next"><a href="Competency_Position_Search" rel="next">@Localizer["Next"]</a></li>
+                    <li class="previous"><a href="Member_Position" rel="prev">@Localizer["Previous"]</a></li>
+                    <li class="next"><a href="Member_Current_position" rel="next">@Localizer["Next"]</a></li>
                 </ul>
 
             </nav>
